--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,4 +1,10 @@
 <% include ./partials/header %>
+<style type="text/css">
+    .space{
+        padding-top: 10px;
+        padding-bottom: 20px;
+    }
+</style>
 <div class="ui main text container segment">
     <div class="ui huge header"><%= blog.title %></div>
     <div class="ui top attached ">
@@ -7,7 +13,7 @@
             <div class="content">
                 <span><%= blog.created.toDateString() %></span>
             </div>
-            <div class="description">
+            <div class="description space">
                 <p><%- blog.body %></p>
             </div>
             <a class="ui orange basic button" href="/blogs/<%= blog._id %>/edit">Edit</a>
